update custom role api
